// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead render function renders a typeahead item 1`] = `
<div
  className="Item"
>
  Example Label
  <span
    className="id"
  >
    example-id
  </span>
</div>
`;

exports[`Typeahead render function should render the list 1`] = `
<div
  className="Typeahead"
>
  <ActionList
    actions={
      Array [
        Object {
          "content": <div
            className="Item"
          >
            apples
          </div>,
          "highlighted": true,
          "index": 0,
          "item": "apples",
        },
        Object {
          "content": <div
            className="Item"
          >
            bananas
          </div>,
          "highlighted": false,
          "index": 1,
          "item": "bananas",
        },
        Object {
          "content": <div
            className="Item"
          >
            cauliflower
          </div>,
          "highlighted": false,
          "index": 2,
          "item": "cauliflower",
        },
      ]
    }
    className="List"
    groupByKey="section"
    maxHeight={300}
  />
  <TextField
    connectRight={null}
    data-lpignore={true}
    error={null}
    placeholder="None"
    readOnly={false}
    resize="both"
    type="text"
  />
</div>
`;

exports[`Typeahead render function should render the list with custom limit on results 1`] = `
<div
  className="Typeahead"
>
  <ActionList
    actions={
      Array [
        Object {
          "content": <div
            className="Item"
          >
            apples
          </div>,
          "highlighted": true,
          "index": 0,
          "item": "apples",
        },
      ]
    }
    className="List"
    groupByKey="section"
    maxHeight={300}
  />
  <TextField
    connectRight={null}
    data-lpignore={true}
    error={null}
    placeholder="None"
    readOnly={false}
    resize="both"
    type="text"
  />
</div>
`;

exports[`Typeahead render function should render the list with custom maxHeight 1`] = `
<div
  className="Typeahead"
>
  <ActionList
    actions={
      Array [
        Object {
          "content": <div
            className="Item"
          >
            apples
          </div>,
          "highlighted": true,
          "index": 0,
          "item": "apples",
        },
        Object {
          "content": <div
            className="Item"
          >
            bananas
          </div>,
          "highlighted": false,
          "index": 1,
          "item": "bananas",
        },
        Object {
          "content": <div
            className="Item"
          >
            cauliflower
          </div>,
          "highlighted": false,
          "index": 2,
          "item": "cauliflower",
        },
      ]
    }
    className="List"
    groupByKey="section"
    maxHeight={999}
  />
  <TextField
    connectRight={null}
    data-lpignore={true}
    error={null}
    placeholder="None"
    readOnly={false}
    resize="both"
    type="text"
  />
</div>
`;

exports[`Typeahead render function should render with selected item and not disabled 1`] = `
<Button
  onClick={[MockFunction]}
  size="default"
>
  Clear
</Button>
`;
